Fix deadline_monitor race condition between monitor thread and the first startDeadline call

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 9.1.0-rc0, 9.0.0-rc1
    • Affects Version/s: None
    • Component/s: None
    • None
    • Query Integration
    • Fully Compatible
    • ALL
    • v9.0
    • 200
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      unit_tests on enterprise-rhel8-debug-tsan-compile

      Host: i-08e1caddf880b234f
      Project: mongodb-mongo-v9.0
      Commit: 99f9fbcb
      Please refer to BF(G) Playbook for instructions on handling BF and BFG tickets as well as Auto-Resolution Rules

      Failing Test Logs:

      Task Logs:

      System Log Assertion Extractor

      Logs:

      CPU constraint detected (sustained >90% for 5+ minutes)
      

      logs

      Command Failure

      Logs:

      Command 'subprocess.exec' ('bazel test sh') in function 'bazel test' (step 6.4 of 6) failed: process encountered problem: exit code 3.
      

      logs

      src/mongo/scripting/scripting_test

      Logs:

      __interceptor_backtrace
      mongo::printStructuredStackTrace()
      mongo::printStackTrace()
      abruptQuit
      abruptQuitAction
      pthread_cond_wait
      ___interceptor_pthread_cond_wait
      void std::_V2::condition_variable_any::wait<std::unique_lock<std::mutex> >(std::unique_lock<std::mutex>&)
      mongo::TaskGroup::waitForKillCount(unsigned long)
      mongo::DeadlineMonitor_IsKillPendingKills_Test::TestBody()
      void testing::internal::HandleExceptionsInMethodIfSupported<testing::Test, void>(testing::Test*, void (testing::Test::*)(), char const*)
      testing::Test::Run()
      testing::TestInfo::Run()
      testing::TestSuite::Run()
      testing::internal::UnitTestImpl::RunAllTests()
      bool testing::internal::HandleExceptionsInMethodIfSupported<testing::internal::UnitTestImpl, bool>(testing::internal::UnitTestImpl*, bool (testing::internal::UnitTestImpl::*)(), char const*)
      testing::UnitTest::Run()
      mongo::unittest::MainProgress::test()
      main
      __libc_start_main
      _start
      

      logs

            Assignee:
            Calvin Nguyen
            Reporter:
            Calvin Nguyen
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: