SERVER-131428 Fix DeadlineMonitor hang when first task has an infinite deadline (#58598)

GitOrigin-RevId: 86ae2d1edab0da92cb4ce0f00e39b04c62fea13c